e_metrobus/static/sass/_route.scss
$station-height: 3.125rem;
$station-font-size: .875rem;
$station-font-line-height: 1rem;

#stationsList {
	width: 100%;
	position: relative;
	padding-bottom: 9rem;
	padding-top: 1rem;
}

.station {

  &__line {
		height: $station-height;
    fill: $gray-1;
	}

	&__name {
    font-size: $station-font-size;
    line-height: $station-font-line-height;
    padding-left: 1rem;
    // center station name vertically
    padding-top: calc((#{$station-height} - #{$station-font-line-height}) / 2 );
    padding-bottom: calc((#{$station-height} - #{$station-font-line-height}) / 2 );
    //prevent two lines
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
	}

	&__between {
		height: 10px;
		line-height: 0;
		fill: $gray-1;
	}
	&__bottom {
		padding: 2.25rem;
		width: 100%;
		background-color: $secondary-color;
		height: 7rem;
		position: fixed;
		bottom: 0;
		span {
			color: $white;
			font-size: 1.5rem;
			font-weight: bold;
		}
	}
}

.highlight-station {
	background-color: $primary-color-1;
	border-radius: 100px;
}

// #stations_form {
// 	button {
// 		// font-weight: 700;
// 		// font-size: 1rem;
// 	}
// }


// Route Dropdown
.route-drop {
	display: flex;
	flex-direction: column;
	height: 100vh;
	width: 100%;

	.route-drop__top {
		height: 20vh;
		background-image: url(../images/Route_top_img.svg);
		background-position: center center;
		background-size: cover;

		@media only screen and (min-width: 500px) {
			height: 24vh;
		}
		@media only screen and (min-width: 700px) {
			height: 28vh;
		}
		@media only screen and (min-width: 850px) {
			height: 32	vh;
		}
	}
	.route-drop__main {
		flex: 1;
		padding: 2rem 1rem;
		align-content: center;
		.route-drop__question {
			width: 100%;
			display: flex;
			flex-wrap: wrap;
		}
		.route-drop__question--end {
			margin-top: 1rem;
		}
		.route-drop__question--icon,
		.route-drop__question--text {
			display: inline-block;
		}
		.route-drop__question--icon img {
			height: 1.25rem;
		}
		.route-drop__question--text label {
			font-size: 1rem;
			font-weight: 700;
			color: $secondary-color;
			padding-left: .5rem;
		}
		.route-drop__dropdown {
			margin-top: .5rem;
			width: 100%;

			select {
				height: 3rem;
				padding-right: 0;
			}
		}
	}
	.route-drop__dotted-line {
		background: url(../images/Route_dotted_line.svg);
		background-position: left;
		background-repeat: no-repeat;
		height: 15vh;
		width: 100%;
	}
	.route-drop__bottom {
		height: 15vh;
		
		.landing__bottom-btn {
			text-align: center;
		}
	}
}

